[gd_scene load_steps=2 format=3 uid="uid://dmjvhoefjp8oe"]

[ext_resource type="Script" uid="uid://bq2hgtxytwvc4" path="res://test_combined.gd" id="1_f2juh"]

[node name="TestCombined" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f2juh")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ServerPanel" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ServerPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ServerPanel/VBoxContainer"]
layout_mode = 2
text = "\"SERVER\""
horizontal_alignment = 1

[node name="ServerOutput" type="RichTextLabel" parent="HBoxContainer/ServerPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="ClientPanel" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ClientPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ClientPanel/VBoxContainer"]
layout_mode = 2
text = "\"CLIENT\""
horizontal_alignment = 1

[node name="ClientOutput" type="RichTextLabel" parent="HBoxContainer/ClientPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
bbcode_enabled = true
scroll_following = true

[node name="ActionBar" type="HBoxContainer" parent="HBoxContainer/ClientPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 4

[node name="Action1" type="VBoxContainer" parent="HBoxContainer/ClientPanel/VBoxContainer/ActionBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="HBoxContainer/ClientPanel/VBoxContainer/ActionBar/Action1"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "---"

[node name="Hotkey" type="Label" parent="HBoxContainer/ClientPanel/VBoxContainer/ActionBar/Action1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
text = "Q"

[node name="Action2" type="VBoxContainer" parent="HBoxContainer/ClientPanel/VBoxContainer/ActionBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="HBoxContainer/ClientPanel/VBoxContainer/ActionBar/Action2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "---"

[node name="Hotkey" type="Label" parent="HBoxContainer/ClientPanel/VBoxContainer/ActionBar/Action2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
text = "W"

[node name="Action3" type="VBoxContainer" parent="HBoxContainer/ClientPanel/VBoxContainer/ActionBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="HBoxContainer/ClientPanel/VBoxContainer/ActionBar/Action3"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "---"

[node name="Hotkey" type="Label" parent="HBoxContainer/ClientPanel/VBoxContainer/ActionBar/Action3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
text = "E"

[node name="Action4" type="VBoxContainer" parent="HBoxContainer/ClientPanel/VBoxContainer/ActionBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="HBoxContainer/ClientPanel/VBoxContainer/ActionBar/Action4"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "---"

[node name="Hotkey" type="Label" parent="HBoxContainer/ClientPanel/VBoxContainer/ActionBar/Action4"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
text = "R"

[node name="Action5" type="VBoxContainer" parent="HBoxContainer/ClientPanel/VBoxContainer/ActionBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="HBoxContainer/ClientPanel/VBoxContainer/ActionBar/Action5"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "---"

[node name="Hotkey" type="Label" parent="HBoxContainer/ClientPanel/VBoxContainer/ActionBar/Action5"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
text = "1"

[node name="MapDisplay" type="RichTextLabel" parent="HBoxContainer/ClientPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
bbcode_enabled = true

[node name="AutoConnectButton" type="Button" parent="HBoxContainer/ClientPanel/VBoxContainer"]
layout_mode = 2
text = "Auto Connect & Setup"

[node name="InputContainer" type="HBoxContainer" parent="HBoxContainer/ClientPanel/VBoxContainer"]
layout_mode = 2

[node name="ClientInput" type="LineEdit" parent="HBoxContainer/ClientPanel/VBoxContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SendButton" type="Button" parent="HBoxContainer/ClientPanel/VBoxContainer/InputContainer"]
layout_mode = 2
text = "Send"
